--- a/notebooks/_003_Finetuning_DistilBERT_For_Banking_Dataset.ipynb
+++ b/notebooks/_003_Finetuning_DistilBERT_For_Banking_Dataset.ipynb
@@ -592,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -759,6 +759,7 @@
         }
       ],
       "source": [
+        "# impor distilbert model\n",
         "classifier = AutoModelForSequenceClassification.from_pretrained(\"distilbert-base-uncased\", num_labels=77)\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"distilbert-base-uncased\")"
       ]
